# udp-dot-product-server

./: CMakeLists.txt  README.md  main.cpp
include/: Constants.h  UDPClient.h  UDPServer.h
src/: UDPClient.cpp  UDPServer.cpp
